jsTimer - Fixed the overlaping text issue

--- a/projects/jsTimer/styles.scss
+++ b/projects/jsTimer/styles.scss
@@ -1,4 +1,5 @@
-$topLoc : 30%;
+
+$topLoc : 10%;
 // $font : 'Fira Code', monospace;
 $font : 'Cascadia code';
 
@@ -16,14 +17,15 @@ main{
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    column-gap: 20px;
+    // top: $topLoc;
 }
 
-
 %baseDiv {
-    position: absolute;
-    left: 50%;
+    // position: absolute;
+    // left: 50%;
     width: 500px;
-    transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
     display: grid;
     gap: 15px;
     justify-content: center;
@@ -43,12 +45,19 @@ main{
 	transition: transform 300ms, box-shadow 300ms ; 
 }
 
-main{
-    display: grid;
-    justify-content: center;
-    align-items: center;   
+.flow{
+    display: flex;
+    align-self: center;
+    justify-items: center;
+    align-items: center;
+
+    flex-direction: column;
+    margin-top: $topLoc;
+
+    // top: $topLoc + 15;
 }
 .timerDiv{
+    // position: absolute;
     @extend %baseDiv;
     top: $topLoc;
 }
@@ -57,38 +66,39 @@ main{
     font-size: 30px;
 }
 
-.wpmDiv{
-    @extend %baseDiv;
-    top: $topLoc + 30;
-}
 
 .wpmText {
     @extend %base-thing;
 }
 
-.test {
-    @extend %base-thing;
-}
-.testDiv {
-    @extend %baseDiv;
-    top: $topLoc + 15;
+.generatedWords {
+    // @extend %base-thing;
+    font-weight: 320;
+    font-size: 19px;
+    color: rgb(71, 71, 71);
 }
 
-input{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
+.generatedWordsDiv {
+    // @extend %baseDiv;
+    // top: $topLoc + 15;
+    text-align: center;
+}
+
+.inputBox {
+    justify-items: center;
+    padding: 15px;
+}
+
+input{    
     display: inline-block;
     border: none;
     outline: none;
     box-sizing: border-box;
-    
+
+    // width: 50%;
+
     font-weight: lighter;
     font-family: $font;
-
-    top: $topLoc + 40;
-
-    width: 15%;
     background-color: rgb(231, 229, 229);
 }
 
@@ -102,21 +112,28 @@ input{
     font-size: 13px;
     color: rgb(158, 152, 152);
 }
-
+.moblieTop{
+    display: flex;
+    flex-direction: column;
+    // width: 100%;
+}
 .mobile {
     display: none;
-    @extend %baseDiv;
+    // @extend %baseDiv;
 }
 div[id="generate"]{
-    @extend %baseDiv;
+    // @extend %baseDiv;
+    margin-top: 20px;
+    margin-bottom: 20px;
     display: none;
 }
 .mobileButtons{
     @extend %base-thing;
+    margin: 10px;
 }
 
 @media only screen and (max-device-width: 480px) {
-    $mobileTop: 10%;
+    $mobileTop: 15%;
     $font : 'Fira Code', monospace;
     body {
         font-family: $font;
@@ -124,26 +141,28 @@ div[id="generate"]{
     .mobile {
         display: flex;
         flex-direction: row;
-        top: $mobileTop + 65;
+        row-gap: 50px;
     }
-    .timerDiv{
-        top: $mobileTop;
+    // .timerDiv{
+    //     // top: $mobileTop;
+    // }
+    .flow {
+        margin-top: $mobileTop;
     }
-    .wpmDiv{
-        top: $mobileTop + 38;
-    }
-    .testDiv {
-        top: $mobileTop + 20;
-        width: 90%;
-    }
-    input{
-        top: $mobileTop+ 47;
-        width: 30%;
-    }
+    // .wpmDiv{
+    //     top: $mobileTop + 38;
+    // }
+    // .generatedWordsDiv {
+    //     // top: $mobileTop + 20;
+    //     // width: 90%;
+    // }
+    // input{
+    //     // top: $mobileTop+ 47;
+    //     // width: 30%;
+    // }
     div[id="generate"]{
-        display: grid;
-        top: $mobileTop+ 56;
-        width: 20%;
+        display: inline-block;
+        
     }
 }
 
